--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,36 @@
 /* CSS Reset */ 
+:root {
+    --primary-color: #6500ff;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style-type: none;
 }
+
+.container {
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+header >.container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card-group {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+.card {
+    flex-basis: calc(100% / 3 - 15 * 3 / 3 );
+    min-width: 200px;
+    border: 2px dashed red;
+}
+
+/* spazio totale / numero colonne - (gap * numero di spazi) / numero colonne
