--- a/css/style.css
+++ b/css/style.css
@@ -10,15 +10,23 @@
     list-style-type: none;
 }
 
+body {
+    font-family: sans-serif;
+}
+
 .container {
     max-width: 900px;
     margin: 0 auto;
 }
 
+/* Container */
+
 header >.container {
     display: flex;
     justify-content: space-between;
 }
+
+/* Cards */
 
 .card-group {
     display: flex;
@@ -30,7 +38,65 @@ header >.container {
 .card {
     flex-basis: calc(100% / 3 - 15 * 3 / 3 );
     min-width: 200px;
+    flex-grow: 1;
+    flex-shrink: 0;
+    padding: 15px;
     border: 2px dashed red;
+    border-radius: 15px;
 }
 
-/* spazio totale / numero colonne - (gap * numero di spazi) / numero colonne
+.card-top p,
+.card-main-content p:first-of-type {
+    font-size: 14px;
+    color: grey;
+}
+
+.card-main-content {
+    text-align: center;
+}
+
+.card-main-content p:first-of-type span {
+    font-size: 2rem;
+    font-weight: bold;
+    color:black;
+}
+
+.card-main-content p:first-of-type span:before {
+    content: '$';
+    font-size: 1rem;
+    font-weight: bold;
+    color: black;
+}
+
+.card-main-content p:last-of-type span {
+    padding: 5px;
+    background-color: rgb(206, 206, 206);
+    border-radius: 5px;
+}
+
+.card-main-content a {
+    display: inline-block;
+    width: 80%;
+    padding: 12px 5px;
+    text-decoration: none;
+    color: white;
+    background-color: var(--primary-color);
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+.card-main-content li {
+    font-size: 1.5rem;
+    line-height: 45px;
+}
+
+.card:nth-of-type(even) {
+    color: white;
+    background-color: var(--primary-color)
+}
+
+.card:nth-of-type(even) a {
+    color: var(--primary-color);
+    background-color: white;
+}
+
