--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,15 @@ header >.container {
     justify-content: space-between;
 }
 
+/* Header */
+header {
+    margin-bottom: 40px;
+}
+
+header p {
+    color: grey;
+}
+
 /* Cards */
 
 .card-group {
@@ -41,14 +50,19 @@ header >.container {
     flex-grow: 1;
     flex-shrink: 0;
     padding: 15px;
-    border: 2px dashed red;
     border-radius: 15px;
+    box-shadow: 0px 3px 4px rgba(0, 0,0, 0.4)
+}
+
+.card-top {
+    margin-bottom: 20px;
 }
 
 .card-top p,
 .card-main-content p:first-of-type {
     font-size: 14px;
     color: grey;
+    margin-bottom: 25px;
 }
 
 .card-main-content {
@@ -59,6 +73,10 @@ header >.container {
     font-size: 2rem;
     font-weight: bold;
     color:black;
+}
+
+.card:nth-of-type(even) p span{
+color: white;
 }
 
 .card-main-content p:first-of-type span:before {
@@ -74,15 +92,27 @@ header >.container {
     border-radius: 5px;
 }
 
+.card:nth-of-type(even) .card-main-content p:first-of-type span:before {
+    content: '$';
+    font-size: 1rem;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+}
+
+.card:nth-of-type(even) .card-main-content p:nth-child(2) span {
+    color: black;
+}
+
 .card-main-content a {
     display: inline-block;
     width: 80%;
-    padding: 12px 5px;
+    padding: 18px 5px;
     text-decoration: none;
+    font-weight: bold;
     color: white;
     background-color: var(--primary-color);
     border-radius: 10px;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 .card-main-content li {
