--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,9 @@ header p {
     flex-grow: 1;
     padding: 40px 30px;
     border-radius: 15px;
+}
+
+.card:nth-of-type(odd) {
     box-shadow: 0px 3px 4px rgba(0, 0,0, 0.4)
 }
 
